testing/errors/breaknotwithinaloop1.a
; (this file also gets included by breaknotwithinaloop2.a)

; "!break" only works inside a loop:
	!break	; -> "!break not within a loop"
